--- a/snails.html
+++ b/snails.html
@@ -16,8 +16,8 @@
     <p>Very house, much comfy
     </p>
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
-    <img src="https://live.staticflickr.com/4116/4771302434_d84db0abe5_b.jpg" alt="Newfoundland Dog BAZYL by alicjap is licensed under CC BY 2.0.">
-    <p>Newfoundlands are large, powerful dogs celebrated for their gentle temperament and thick, water-resistant coats. Known as "gentle giants," they are friendly, patient, and excellent with children, making them ideal family pets. Their strong swimming ability and calm demeanor suit them for water rescue work, and their lush fur requires regular grooming to keep them comfortable and healthy.</p>
+    <img src="https://assets3.thrillist.com/v1/image/2556231/792x456/scale;webp=auto;jpeg_quality=60;progressive.jpg">
+    <p>Snailfriends!</p>
   </body>
 </html>
   </body>
