--- a/snails.html
+++ b/snails.html
@@ -17,7 +17,7 @@
     </p>
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
     <img src="https://assets3.thrillist.com/v1/image/2556231/792x456/scale;webp=auto;jpeg_quality=60;progressive.jpg">
-    <p>Snailfriends!</p>
+    <p>This is Millie. Millie is a snailfriend. Be like Millie.</p>
   </body>
 </html>
   </body>
