--- a/snails.html
+++ b/snails.html
@@ -2,6 +2,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://kam535.github.io/sample-pages/assets/css/styles.css">
+    <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+        height: 40%;
+      }
+      p {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
      <h1>Why Snails are Biologically Superior to Humans</h1>
@@ -16,7 +28,7 @@
     <p>Very house, much comfy
     </p>
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
-    <img src="https://assets3.thrillist.com/v1/image/2556231/792x456/scale;webp=auto;jpeg_quality=60;progressive.jpg">
+    <img src="Millie%20is%20a%20snailfriend.jpg">
     <p>This is Millie. Millie is a snailfriend. Be like Millie.</p>
   </body>
 </html>
