--- a/snails.html
+++ b/snails.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-     <h1>Why Snails are Biologically Superior to Humans</h1>
+     <h1>Why Humans Are Just Inferior Snails</h1>
     <p>Snail supremacy.
     </p>
     <h2>Exhibit A: smol</h2>
