--- a/snails.html
+++ b/snails.html
@@ -16,19 +16,20 @@
     </style>
   </head>
   <body>
-     <h1>Why Humans Are Just Inferior Snails</h1>
+    <h1>Why Humans Are Just Inferior Snails</h1>
+    <h2 style="color:Tomato;">Click on each picture to learn more!</h2>
     <p>Snail supremacy.
     </p>
     <h2>Exhibit A: smol</h2>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s">
+    <a href="SUBPAGE 1 - PLACEHOLDER"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s"></a>
     <p>Smol is good.
     </p>
     <h2>Exhibit B: Has house, will travel</h2>
-    <img src="snail.jpg">
+    <a href="SUBPAGE 2 - PLACEHOLDER"><img src="snail.jpg"></a>
     <p>Very house, much comfy
     </p>
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
-    <img src="Millie%20is%20a%20snailfriend.jpg">
+    <a href="SUBPAGE 3 - PLACEHOLDER"><img src="Millie%20is%20a%20snailfriend.jpg"></a>
     <p>This is Millie. Millie is a snailfriend. Be like Millie.</p>
   </body>
 </html>
