--- a/snails.html
+++ b/snails.html
@@ -21,15 +21,15 @@
     <p>Snail supremacy.
     </p>
     <h2>Exhibit A: smol</h2>
-    <a href="SUBPAGE 1 - PLACEHOLDER"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s"></a>
+    <a href="Subpages/Exhibit_A"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s"></a>
     <p>Smol is good.
     </p>
     <h2>Exhibit B: Has house, will travel</h2>
-    <a href="SUBPAGE 2 - PLACEHOLDER"><img src="snail.jpg"></a>
+    <a href="Subpages/Exhibit_B"><img src="Images/snail.jpg"></a>
     <p>Very house, much comfy
     </p>
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
-    <a href="SUBPAGE 3 - PLACEHOLDER"><img src="Millie%20is%20a%20snailfriend.jpg"></a>
+    <a href="Subpages/Exhibit_C"><img src="Images/Millie%20is%20a%20snailfriend.jpg"></a>
     <p>This is Millie. Millie is a snailfriend. Be like Millie.</p>
   </body>
 </html>
