--- a/snails.html
+++ b/snails.html
@@ -26,11 +26,11 @@
     <p>Smol is good.</p>
     
     <h2>Exhibit B: Has house, will travel</h2>
-    <a href="Subpages/Exhibit_B"><img src="Images/snail.jpg"></a>
+    <a href="Subpages/Exhibit_B"><img src="/Images/snail.jpg"></a>
     <p>Very house, much comfy</p>
     
     <h2>Exhibit C: Everyone wants to be snailfriends</h2>
-    <a href="Subpages/Exhibit_C"><img src="Images/Millie%20is%20a%20snailfriend.jpg"></a>
+    <a href="Subpages/Exhibit_C"><img src="/Images/Millie%20is%20a%20snailfriend.jpg"></a>
     <p>This is Millie. Millie is a snailfriend. Be like Millie.</p>
 
     <script>
