--- a/Subpages/Exhibit_A.html
+++ b/Subpages/Exhibit_A.html
@@ -2,16 +2,18 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://kam535.github.io/sample-pages/assets/css/styles.css">
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      height: 100%;
-    }
-    p {
-      text-align: center;
-    }
+    <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 100%;
+      }
+      p {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <h1>Exhibit A: smol</h1>
