--- a/Subpages/Exhibit_B.html
+++ b/Subpages/Exhibit_B.html
@@ -2,20 +2,22 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://kam535.github.io/sample-pages/assets/css/styles.css">
-    img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      width: 100%;
-      height: 100%;
-    }
-    p {
-      text-align: center;
-    }
+    <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+        height: 100%;
+      }
+      p {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <h1>Exhibit B: Has house, will travel</h1>
     <p>PLACEHOLDER TEXT</p>
-    <img src="snail.jpg">
+    <img src="../Images/snail.jpg">
   </body>
 </html>
