--- a/snails.html
+++ b/snails.html
@@ -19,7 +19,7 @@
     
     <h1>Why Humans Are Just Inferior Snails</h1>
     <h2>Click on each picture to learn more!</h2>
-    <h2 style="color:Tomato;">Snails Visited: <h2 class="pageCounter"></h2></h2>
+    <h2 style="color:Tomato;">Snails Visited: </h2> <h2 class="pageCounter"></h2>
     
     <h2>Exhibit A: smol</h2>
     <a href="Subpages/Exhibit_A"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s"></a>
