--- a/Subpages/Exhibit_C.html
+++ b/Subpages/Exhibit_C.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <h1>Exhibit C: smol</h1>
+    <h1>Exhibit C: Everyone wants to be snailfriends</h1>
     <p>PLACEHOLDER TEXT</p>
     <img src="../Images/Millie%20is%20a%20snailfriend.jpg">
   </body>
