--- a/Subpages/Exhibit_B.html
+++ b/Subpages/Exhibit_B.html
@@ -18,6 +18,6 @@
   <body>
     <h1>Exhibit B: Has house, will travel</h1>
     <p>PLACEHOLDER TEXT</p>
-    <img src="Images/snail.jpg">
+    <img src="../Images/snail.jpg">
   </body>
 </html>
