--- a/snails.html
+++ b/snails.html
@@ -36,15 +36,19 @@
     <script>
 
       let pageCounter = 0;
-      document.getElementById("pageCounter").innerHTML = pageCounter
+      document.getElementById("pageCounter").innerHTML = pageCounter;
+      document.getElementById("Exhibit_A").addEventListener("click", increaseCounter);
+      document.getElementById("Exhibit_B").addEventListener("click", increaseCounter);
+      document.getElementById("Exhibit_C").addEventListener("click", increaseCounter);
 
-      const Exhibit_A = document.querySelector(".Exhibit_A");
-      const Exhibit_B = document.querySelector(".Exhibit_B");
-      const Exhibit_C = document.querySelector(".Exhibit_C");
 
-      Exhibit_A.addEventListener("click", increaseCounter);
-      Exhibit_B.addEventListener("click", increaseCounter);
-      Exhibit_C.addEventListener("click", increaseCounter);
+      /const Exhibit_A = document.querySelector(".Exhibit_A");
+      /const Exhibit_B = document.querySelector(".Exhibit_B");
+      /const Exhibit_C = document.querySelector(".Exhibit_C");
+
+      /Exhibit_A.addEventListener("click", increaseCounter);
+      /Exhibit_B.addEventListener("click", increaseCounter);
+      /Exhibit_C.addEventListener("click", increaseCounter);
       
       function increaseCounter() {
         pageCounter++;
