--- a/snails.html
+++ b/snails.html
@@ -42,13 +42,13 @@
       document.getElementById("Exhibit_C").addEventListener("click", increaseCounter);
 
 
-      /const Exhibit_A = document.querySelector(".Exhibit_A");
-      /const Exhibit_B = document.querySelector(".Exhibit_B");
-      /const Exhibit_C = document.querySelector(".Exhibit_C");
+      //const Exhibit_A = document.querySelector(".Exhibit_A");
+      //const Exhibit_B = document.querySelector(".Exhibit_B");
+      //const Exhibit_C = document.querySelector(".Exhibit_C");
 
-      /Exhibit_A.addEventListener("click", increaseCounter);
-      /Exhibit_B.addEventListener("click", increaseCounter);
-      /Exhibit_C.addEventListener("click", increaseCounter);
+      //Exhibit_A.addEventListener("click", increaseCounter);
+      //Exhibit_B.addEventListener("click", increaseCounter);
+      //Exhibit_C.addEventListener("click", increaseCounter);
       
       function increaseCounter() {
         pageCounter++;
