--- a/snails.html
+++ b/snails.html
@@ -21,7 +21,7 @@
     
     <h1>Why Humans Are Just Inferior Snails</h1>
     <h2>Click on each picture to learn more!</h2>
-    <h2 style="color:Tomato;">Snails Visited: <nobr><h2 id="pageCounter"></nobr></h2></h2>
+    <h2 style="color:Tomato;">Snails Visited: <h2 id="pageCounter" style="display:inline" style="background-color:Tomato;"></h2></h2>
     
     <h2>Exhibit A: smol</h2>
     <a id="Exhibit_A" href="Subpages/Exhibit_A" target="_blank"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwELmi7bFrly-6wlSKvbX-adGQc9qMxCFyNg&s"></a>
